--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
 </div> <!-- /pollForm -->
 
 <script>
+  // get element
+  function ge(id){ return document.getElementById(id); }
+ 
+  // create element
+  function ce(type){ return document.createElement(type); }
 
   var pollForm = document.getElementById('pollForm'),
       optionList = document.getElementById('optionList'),
@@ -34,20 +39,24 @@
       ipCheck = document.getElementById('ipCheck'),
       createBtn = document.getElementById('createBtn');
 
-  var last;
 
+  function onKeyDown(){
+    last.onkeydown = null;
 
-  // Set class last to the last optionList child
-  function setLast(){
-    last = optionList.children[optionList.children.length-1].children[0];
+    var li = document.createElement('li'),
+        input = document.createElement('input');
+
+    li.appendChild(input);
+
+    input.onkeydown = onKeyDown;
+
+    optionList.appendChild(li);
+
+    last = input;
   }
-  setLast();
 
-  console.log(last);
-
-
-
-
+  var last = optionList.children[optionList.children.length-1].children[0];
+  last.onkeydown = onKeyDown;
 
 
 </script>
