Small HTML cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,7 @@
 
 
   <footer>
-    <a href='http://strawpoll.me'>Strawpoll.me</a>
-    rip by
+    <a href='http://strawpoll.me'>Strawpoll.me</a> rip by 
     <a href='http://opensoars.github.io'>Opensoars</a> (in a couple of hours).
   </footer>
 
