Small HTML cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,12 @@
-<!DOCTYPE html><html><head>
+<!DOCTYPE html>
+<html>
+<head>
+
   <title>Poll</title>
 
-</head><body>
+</head>
+<body>
+
 
   <header>
 
@@ -46,10 +51,12 @@
 
     <a href='http://strawpoll.me'>Strawpoll.me</a> rip by 
     <a href='http://opensoars.github.io'>Opensoars</a> (in a couple of hours).
-    
+
   </footer>
 
   <!-- JS -->
   <script src='js/app.js'></script>
 
-</body></html>
+
+</body>
+</html>
