Changed title input to a textarea, removed npm run app

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,9 @@
   <section id='main'>
 
     <div id='pollForm'>
-      <p><input type='text' id='titleInp' placeholder='Enter poll title..'></p>
+      <p>
+        <textarea cols='30' rows='4' id='titleInp' placeholder='Enter poll title..'></textarea>
+      </p>
 
       <ol id='optionList'>
         <li> <input type='text' placeholder='Enter poll option..'> </li>
