Created a form title

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
   <section id='main'>
 
     <div id='pollForm'>
+
+      <h3>Create a poll</h3>
+
       <p>
         <textarea cols='30' rows='4' id='titleInp' placeholder='Enter poll title..'></textarea>
       </p>
