Added poll html id structure

--- a/public/polls.html
+++ b/public/polls.html
@@ -11,7 +11,7 @@
   var pollsList = document.getElementById('pollsList');
 
   function drawPoll(poll){
-    pollsList.innerHTML += "<li><a href='/polls/" + poll.id + "'>"
+    pollsList.innerHTML += "<li><a href='/poll.html?id=" + poll.id + "'>"
       + JSON.stringify(poll) + "</a></li>";
   }
 
