Fixed html structure

--- a/public/poll/index.html
+++ b/public/poll/index.html
@@ -1,10 +1,13 @@
-<h1>Poll</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Poll</title>
+</head>
+<body>
 
+  <h1>Poll</h1>
 
-<script>
+  <script src='js/poll.js'></script>
 
-  var id = window.location.search.split('=')[1];
-
-  console.log(id);
-
-</script>
+</body>
+</html>
