polls list html structure added

--- a/public/polls/index.html
+++ b/public/polls/index.html
@@ -7,10 +7,33 @@
 </head>
 <body>
 
-  <h1>Polls</h1>
+  <header>
 
-  <ul id='pollsList'></ul>
+    <h1>Polls</h1>
 
+  </header>
+
+  <section id='main'>
+
+    <ul id='pollsList'></ul>
+
+  </section>
+
+  <section id='links'>
+
+    <a href='/'>Create a poll</a>
+    
+  </section>
+
+  <footer>
+
+    <a href='http://strawpoll.me'>Strawpoll.me</a> rip by 
+    <a href='http://opensoars.github.io'>Opensoars</a> (in a couple of hours).
+
+  </footer>
+
+
+  <!-- JS -->
   <script src='js/polls.js'></script>
 
 </body>
