Added html structure to poll

--- a/public/poll/index.html
+++ b/public/poll/index.html
@@ -5,8 +5,35 @@
 </head>
 <body>
 
-  <h1 id='pollTitle'>Poll</h1>
+  <header>
 
+    <h1 id='pollTitle'>Poll</h1>
+
+  </header>
+
+
+  <section id='main'>
+
+
+  </section>
+  
+
+  <section id='links'>
+
+    <a href='/'>Create a poll</a>
+    <a href='/polls'>List of polls</a>
+    
+  </section>
+
+  <footer>
+
+    <a href='http://strawpoll.me'>Strawpoll.me</a> rip by 
+    <a href='http://opensoars.github.io'>Opensoars</a> (in a couple of hours).
+
+  </footer>
+
+
+  <!-- JS -->
   <script src='js/poll.js'></script>
 
 </body>
