--- a/public/poll/index.html
+++ b/public/poll/index.html
@@ -7,7 +7,7 @@
 
   <header>
 
-    <h1 id='pollTitle'>Poll</h1>
+    <h1 id='hTitle'>Vote for poll</h1>
 
   </header>
 
@@ -22,7 +22,7 @@
 
     <a href='/'>Create a poll</a>
     <a href='/polls'>List of polls</a>
-    
+
   </section>
 
   <footer>
