Poll vote system started

--- a/public/poll/index.html
+++ b/public/poll/index.html
@@ -16,8 +16,7 @@
 
     <section id='pollData'></section>
 
-    <button id='voteBtn'>Vote</button>
-
+    <p><button id='voteBtn'>Vote</button></p>
 
   </section>
   
