--- a/public/poll/index.html
+++ b/public/poll/index.html
@@ -16,7 +16,7 @@
 
     <section id='pollData'></section>
 
-    <p><button id='voteBtn'>Vote</button></p>
+    <p><button id='voteBtn'>Vote!</button></p>
 
   </section>
   
