Started results for polls

--- a/public/poll/index.html
+++ b/public/poll/index.html
@@ -18,6 +18,12 @@
 
     <p><button id='voteBtn'>Vote!</button></p>
 
+    <section id='results'>
+      <h3>Results</h3>
+      <ol id='resultList'>
+      </ol>
+    </section>
+
   </section>
   
 
