--- a/public/poll/index.html
+++ b/public/poll/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>Poll</title>
+
+  <link rel='icon' type='image/x-icon' href='/../style/img/favicon.png'>
+  
 </head>
 <body>
 
