--- a/public/poll/index.html
+++ b/public/poll/index.html
@@ -5,7 +5,7 @@
   <title>Poll</title>
 
   <link rel='icon' type='image/x-icon' href='/../style/img/favicon.png'>
-  
+
 </head>
 <body>
 
@@ -24,8 +24,8 @@
 
     <section id='results'>
       <h3>Results</h3>
-      <ol id='resultList'>
-      </ol>
+      <ul id='resultList'>
+      </ul>
     </section>
 
   </section>
